fix error message when NumPy is not available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -868,7 +868,8 @@ if(PYTHON OR PYTHON_MODULE)
         if (PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
             set(Python_LIBRARIES ${PYTHON_LIBRARIES})
             set(Python_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS})
-            set(PYTHON_FOUND ${PYTHONLIBS_FOUND})
+            set(Python_Interpreter_FOUND ${PYTHONINTERP_FOUND})
+            set(Python_Development_FOUND ${PYTHONLIBS_FOUND})
         endif()
         if (ret EQUAL 0)
             set(Python_NumPy_FOUND TRUE)
@@ -876,7 +877,7 @@ if(PYTHON OR PYTHON_MODULE)
     else()
         find_package(Python ${PYTHONVERSION} COMPONENTS Interpreter Development NumPy)
     endif()
-    if(PYTHON_FOUND)
+    if(Python_Interpreter_FOUND AND Python_Development_FOUND)
         if(NOT Python_NumPy_FOUND)
             message(FATAL_ERROR "Python NumPy package was not found.\n"
             "${PYTHONMSG} ${PYTHON_MODULEMSG}")
