--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -230,6 +230,7 @@ jobs:
         shell: msys2 {0}
         run: |
           export PATH=`cygpath "${pythonLocation}"`:$PATH
+          export PYTHON_EXECUTABLE=`cygpath "${pythonLocation}"`/python
           if [[ -n "${{ steps.setup-python-32.outputs.python-version }}" ]]; then
             export PYTHONVERSION="${{ steps.setup-python-32.outputs.python-version }}"
           else
