--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -862,9 +862,12 @@ if(PYTHON OR PYTHON_MODULE)
         set(PYTHON_MODULEMSG "Use -DPYTHON_MODULE=OFF to disable Python module.\n")
     endif(PYTHON_MODULE)
     if (${CMAKE_VERSION} VERSION_LESS "3.14")
+        if (DEFINED ENV{PYTHON_EXECUTABLE})
+            set(PYTHON_EXECUTABLE $ENV{PYTHON_EXECUTABLE})
+        endif()
         find_package(PythonInterp ${PYTHONVERSION})
         find_package(PythonLibs ${PYTHONVERSION})
-        execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "import numpy as np; print(np.get_include())" RESULT_VARIABLE ret OUTPUT_VARIABLE Python_NumPy_INCLUDE_DIRS ERROR_QUIET)
+        execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "import numpy as np; print(np.get_include())" RESULT_VARIABLE ret OUTPUT_VARIABLE Python_NumPy_INCLUDE_DIRS ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
         if (PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
             set(Python_LIBRARIES ${PYTHON_LIBRARIES})
             set(Python_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS})
@@ -874,6 +877,10 @@ if(PYTHON OR PYTHON_MODULE)
             set(Python_NumPy_FOUND TRUE)
         endif()
     else()
+        if (DEFINED ENV{PYTHON_EXECUTABLE})
+            set(Python_EXECUTABLE $ENV{PYTHON_EXECUTABLE})
+        endif()
+        message(${Python_EXECUTABLE})
         find_package(Python ${PYTHONVERSION} COMPONENTS Interpreter Development NumPy)
     endif()
     if(PYTHON_FOUND)
