--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -163,7 +163,7 @@ jobs:
         with:
           repository: gnudatalanguage/gdlde
       - name: Install MSMPI
-        if: matrix.deps == 'full-msmpi'
+        if: matrix.deps == 'debug' || matrix.deps == 'headless'
         run: |
           Invoke-WebRequest -Uri https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe -OutFile MSMpiSetup.exe
           .\MSMpiSetup.exe -unattend
@@ -198,19 +198,18 @@ jobs:
       - name: Setup Python (64 bit)
         id: setup-python-64
         uses: actions/setup-python@v2
-        if: matrix.arch == 'x86_64' && (matrix.deps == 'full-msmpi' || matrix.deps == 'full')
+        if: matrix.arch == 'x86_64'
         with:
           python-version: '3.x'
           architecture: x64
       - name: Setup Python (32 bit)
         id: setup-python-32
         uses: actions/setup-python@v2
-        if: matrix.arch == 'i686' && (matrix.deps == 'full-msmpi' || matrix.deps == 'full')
+        if: matrix.arch == 'i686'
         with:
           python-version: '3.x'
           architecture: x86
       - name: Install Numpy
-        if: matrix.deps == 'full-msmpi' || matrix.deps == 'full'
         run: pip install numpy
       - name: Build GDL
         shell: msys2 {0}
