--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -179,6 +179,12 @@ ${SOURCES}
 sax.cpp
 )
 endif(USE_EXPAT)
+if(WIN32)
+set(SOURCES
+${SOURCES}
+gdl.rc
+)
+endif(WIN32)
 if(HAVE_LIBWXWIDGETS AND WIN32)
 find_file(WX_RC wx.rc HINTS ${wxWidgets_INCLUDE_DIRS} PATH_SUFFIXES wx/msw)
 set(SOURCES
