--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,11 @@ on:
       - master
   pull_request:
   workflow_dispatch:
+    inputs:
+      type:
+        description: 'Build type (`debug` or `release`)'
+        default: 'debug'
+        required: true
 
 # Tip: Use this action to debug with SSH.
 #      - name: Setup upterm session
@@ -23,7 +28,7 @@ jobs:
     - name: Create Build Matrix (Windows)
       id: set-matrix-windows
       run: |
-        if [[ '${{ github.event_name }}' == "schedule" ]]; then 
+        if [[ '${{ github.event_name }}' == "schedule" || '${{ github.event.inputs.name }}' == "release" ]]; then 
             matrix="{deps: ['standard', 'headless'], arch: ['x86_64'], configuration: ['Release']}"
         else
             matrix="{deps: ['debug'], arch: ['x86_64'], configuration: ['Debug']}"
@@ -32,14 +37,14 @@ jobs:
     - name: Create Build Matrix (Linux/macOS)
       id: set-matrix-others
       run: |
-        if [[ '${{ github.event_name }}' == "schedule" ]]; then 
+        if [[ '${{ github.event_name }}' == "schedule" || '${{ github.event.inputs.name }}' == "release" ]]; then 
             matrix="{os: ['ubuntu-latest', 'macos-latest'], deps: ['standard', 'headless'], configuration: ['Release']}"
         else
             matrix="{os: ['ubuntu-latest', 'macos-latest'], deps: ['debug'], configuration: ['Debug']}"
         fi
         echo "::set-output name=matrix-others::$matrix"
     - name: Remove Release (scheduled build only)
-      if: github.event_name == 'schedule'
+      if: github.event_name == 'schedule' || github.event.inputs.name == 'release'
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
       with:
         delete_release: true
@@ -102,7 +107,7 @@ jobs:
           path: gdl-*-${{ matrix.deps }}.zip
           name: GDL (${{ matrix.os }}, ${{ matrix.deps }}, ${{ matrix.configuration }})
       - name: Upload Release Assets
-        if: github.event_name == 'schedule' && matrix.os == 'macos-latest'
+        if: (github.event_name == 'schedule' || github.event.inputs.name == 'release') && matrix.os == 'macos-latest'
         uses: ncipollo/release-action@v1
         with:
           artifacts: "gdl-*-${{ matrix.deps }}.zip"
@@ -241,7 +246,7 @@ jobs:
           name: GDL (windows-latest, ${{ matrix.deps }}, ${{ matrix.arch }}, ${{ matrix.configuration }})
           path: gdl-*-${{ matrix.deps }}.zip
       - name: Upload Release Assets
-        if: github.event_name == 'schedule'
+        if: github.event_name == 'schedule' || github.event.inputs.name == 'release'
         uses: ncipollo/release-action@v1
         with:
           artifacts: "gdlsetup-*-${{ matrix.deps }}.exe,gdl-*-${{ matrix.deps }}.zip"
