--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,14 +103,16 @@ jobs:
       - name: Package GDL
         run: |
           scripts/build_gdl.sh install
+          scripts/build_gdl.sh pack
           scripts/build_gdl.sh prep_deploy
-      - name: Fix permission for upterm
-        run: sudo chown -R $(whoami) /usr/local/share/man/man4
-        if: matrix.os == 'macos-latest'
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
-        if: matrix.os == 'macos-latest'
       - name: Upload Build Artifacts
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v2.2.1
+        with:
+          path: gdl-*-${{ matrix.deps }}.dmg
+          name: GDL (${{ matrix.os }}, ${{ matrix.deps }}, ${{ matrix.configuration }})
+      - name: Upload Build Artifacts
+        if: matrix.os != 'macos-latest'
         uses: actions/upload-artifact@v2.2.1
         with:
           path: gdl-*-${{ matrix.deps }}.zip
@@ -119,7 +121,7 @@ jobs:
         if: (github.event_name == 'schedule' || github.event.inputs.type == 'release') && matrix.os == 'macos-latest'
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "gdl-*-${{ matrix.deps }}.zip"
+          artifacts: "gdl-*-${{ matrix.deps }}.dmg"
           name: Weekly Binary Release (unstable)
           body: Weekly Binary Release (unstable)
           prerelease: true
