--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,13 +106,13 @@ jobs:
           scripts/build_gdl.sh pack
           scripts/build_gdl.sh prep_deploy
       - name: Upload Build Artifacts
-        if: matrix.os == 'macos-latest'
+        if: contains(matrix.os, 'macos')
         uses: actions/upload-artifact@v2.2.1
         with:
           path: gdl-*-${{ matrix.deps }}.dmg
           name: GDL (${{ matrix.os }}, ${{ matrix.deps }}, ${{ matrix.configuration }})
       - name: Upload Build Artifacts
-        if: matrix.os != 'macos-latest'
+        if: ! contains(matrix.os, 'macos')
         uses: actions/upload-artifact@v2.2.1
         with:
           path: gdl-*-${{ matrix.deps }}.zip
