--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
           path: gdl-*-${{ matrix.deps }}.dmg
           name: GDL (${{ matrix.os }}, ${{ matrix.deps }}, ${{ matrix.configuration }})
       - name: Upload Build Artifacts
-        if: ! contains(matrix.os, 'macos')
+        if: "!contains(matrix.os, 'macos')"
         uses: actions/upload-artifact@v2.2.1
         with:
           path: gdl-*-${{ matrix.deps }}.zip
