--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,14 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
 # Set some policies to fix warnings in newer versions of cmake
-cmake_policy(SET CMP0075 NEW)
-cmake_policy(SET CMP0077 NEW)
+# Since VERSION_GREATER_EQUAL is available only since 3.7, we use 
+# VERSION_GREATER combined with VERSION_EQUAL to achieve what we want
+if (CMAKE_VERSION VERSION_GREATER "3.12.0" OR CMAKE_VERSION VERSION_EQUAL "3.12.0")
+    cmake_policy(SET CMP0075 NEW)
+endif(CMAKE_VERSION VERSION_GREATER "3.12.0" OR CMAKE_VERSION VERSION_EQUAL "3.12.0")
+if (CMAKE_VERSION VERSION_GREATER "3.13.0" OR CMAKE_VERSION VERSION_EQUAL "3.13.0")
+    cmake_policy(SET CMP0077 NEW)
+endif(CMAKE_VERSION VERSION_GREATER "3.13.0" OR CMAKE_VERSION VERSION_EQUAL "3.13.0")
 
 project(GDL)
 set(CMAKE_CXX_STANDARD 11)
