trying to catch syntax errors in GDL test codes within CTest workflow

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -29,7 +29,7 @@ endif()
 string(REGEX MATCHALL "test[_a-zA-Z0-9]+\\.pro" TESTS ${TESTLIST})
 foreach(TEST ${TESTS})
   string(REGEX REPLACE "\\.pro$" "" TESTNAME ${TEST})
-  add_test(NAME ${TEST} COMMAND ${GDL_BINARY} -quiet -e ${TESTNAME})
+  add_test(NAME ${TEST} COMMAND ${GDL_BINARY} -quiet -e "if execute('${TESTNAME}') ne 1 then exit, status=1")
   if (${TESTNAME} EQUAL "test_call_external")
     set_tests_properties(${TEST} PROPERTIES DEPEND test_build_libtest_ce)
   endif()
