--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,8 @@ jobs:
           scripts/build_gdl.sh configure
           scripts/build_gdl.sh build
           scripts/build_gdl.sh install
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
       - name: Package GDL
         run: |
           scripts/build_gdl.sh prep_deploy
