missing QHULL_EXISTS()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1000,6 +1000,7 @@ if(QHULL)
   set(CMAKE_PREFIX_PATH ${QHULLDIR})
   find_package(QHULL QUIET)
   set(HAVE_QHULL ${QHULL_FOUND})
+  set(USE_QHULL ${QHULL_FOUND})
   if(QHULL_FOUND)
       set(LIBRARIES ${LIBRARIES} ${QHULL_LIBRARIES})
       include_directories(${QHULL_INCLUDE_DIR})
