sorting out quick_start_GDL issue

--- a/scripts/quick_start_GDL.sh.in
+++ b/scripts/quick_start_GDL.sh.in
@@ -8,9 +8,6 @@
 # AC 01/10/2010: we can keep the current $GDL_PATH using -g [--gdl_path]
 #
 
-Absolute_PATH="`dirname \"$0\"`" 
-Absolute_PATH="`( cd \"$Absolute_PATH\" && pwd )`"
-#
 if [ $BASH_SOURCE != $0 ] ; then
    echo "Please run this script throw one in the 2 next commands:"
    echo "1/    ./quick_run_GDL.sh"
@@ -71,13 +68,13 @@ if [ "$flag_help" -eq 1 ] ; then
 fi
 #
 if [ "$flag_quiet" -eq 0 ] ; then
-    echo "Running current GDL with ./src/pro and ./testsuite in GDL_PATH"
+    echo "Running current GDL with CMAKE_SOURCE_DIR/src/pro and CMAKE_SOURCE_DIR/testsuite in GDL_PATH"
 fi
 #
 if [ "$flag_gdl_path" -eq 0 ] ; then
-    export GDL_PATH='+'${Absolute_PATH}'/src/pro/:+'${Absolute_PATH}'/testsuite/'
+    export GDL_PATH='+${CMAKE_SOURCE_DIR}/src/pro/:+${CMAKE_SOURCE_DIR}/testsuite/'
 else
-    export GDL_PATH='+'${Absolute_PATH}'/src/pro/:+'${Absolute_PATH}'/testsuite/:'${REF_GDL_PATH}
+    export GDL_PATH='+${CMAKE_SOURCE_DIR}/src/pro/:+${CMAKE_SOURCE_DIR}/testsuite/:${REF_GDL_PATH}'
 fi
 #
 if [ "$flag_quiet" -eq 0 ] ; then
@@ -85,9 +82,9 @@ if [ "$flag_quiet" -eq 0 ] ; then
 fi
 #
 if [ "$flag_valgrind" -eq 1 ] ; then
-    valgrind ${Absolute_PATH}/src/gdl
+    valgrind ${CMAKE_BINARY_DIR}/src/gdl
 else
-    ${Absolute_PATH}/src/gdl
+    ${CMAKE_BINARY_DIR}/src/gdl
 fi
 #
 # restoring initial envionment
