Major changes: - removed wingcc - enforce wxwidgets driver on windows - add a small number of drivers, copied from plplot project, modified by us, to work in all cases with or without the corresponding plplot driver being installed or not by the system. - these drivers can be adjusted for gdl needs (speed, but also good looking) - the wxwidgets driver will be the old (deprected) driver as it is so much faster and supports Hershey fonts.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ dialog.cpp
 dinterpreter.cpp
 dnode.cpp
 dpro.cpp
+dSFMT/dSFMT.c
 dstructdesc.cpp
 dstructfactory.cxx
 dstructgdl.cpp
@@ -53,22 +54,14 @@ gdlarray.cpp
 gdleventhandler.cpp
 gdlexception.cpp
 gdlgstream.cpp
-dSFMT/dSFMT.c
 )
 
-if(WIN32)
+if(NOT WIN32)
 set(SOURCES
 ${SOURCES}
-otherdevices/gdlwinstream.cpp
-gtdhelper.cpp
-otherdevices/devicewin.cpp
+gdlxstream.cpp
 )
-else(WIN32)
-set(SOURCES
-${SOURCES}
-otherdevices/gdlxstream.cpp
-)
-endif(WIN32)
+endif(NOT WIN32)
 
 set(SOURCES
 ${SOURCES}
